<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kozyhub.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_cafeDetailFragment"
            app:destination="@id/cafeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.kozyhub.ui.news.NewsFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_navigation_news_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.example.kozyhub.ui.booking_list.BookingListFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_booking">
        <action
            android:id="@+id/action_navigation_booking_to_cafeDetailFragment"
            app:destination="@id/cafeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.kozyhub.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.kozyhub.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.kozyhub.ui.product_detail.ProductDetailFragment"
        android:label="Product Detail"
        tools:layout="@layout/fragment_product_detail" />
    <fragment
        android:id="@+id/cafeDetailFragment"
        android:name="com.example.kozyhub.ui.cafe.CafeDetailFragment"
        android:label="{name}"
        tools:layout="@layout/fragment_cafe_detail">
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="cafe"
            app:argType="com.example.kozyhub.model.Cafe" />
        <action
            android:id="@+id/action_cafeDetailFragment_to_menuDetailFragment"
            app:destination="@id/menuDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuDetailFragment"
        android:name="com.example.kozyhub.ui.menu_detail.MenuDetailFragment"
        android:label="{name}"
        tools:layout="@layout/fragment_menu_detail">
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="menu"
            app:argType="com.example.kozyhub.model.Menu" />
    </fragment>


</navigation>